# Scheduler

./: .gitignore  CMakeLists.txt  README.md  activate.sh  flake.nix  install.sh  pyproject.toml
cmake/: AddCustomTargets.cmake  AddExamples.cmake  AddTests.cmake  clang-toolchain.cmake
conf/: AddTests.cmake
docs/: index.md  justification.md
examples/: CMakeLists.txt  app-loop.c
inc/: scheduler.h  tasks.h
inc/app/: defs.h  types.h
inc/conf/: defs.h  types.h
inc/container/: ring.h
inc/containers/: item.h  ring.h
inc/gbox/: scheduler.h  tasks.h
inc/gbox/container/: ring.h
inc/gbox/utility/: logger.h  sys.h
inc/traits/: display.h
inc/utility/: errors.h  logger.h  ring.h  sys.h
lib-macros/: CMakeLists.txt
lib-macros/inc/gbox/macros/: async.hpp  plugins.hpp
lib-macros/src/: CMakeLists.txt  executor.cpp  plugins.cpp
lib-macros/test/: CMakeLists.txt  executor.cpp  gbox_executor.cpp
lib-runtime/: CMakeLists.txt
lib-runtime/inc/gbox/runtime/: scheduler.h  spawn.h  tasks.h
lib-runtime/inc/gbox/runtime/conf/: defs.h  types.h
lib-runtime/inc/gbox/runtime/container/: ring.h
lib-runtime/inc/gbox/runtime/utility/: errors.h  logger.h  sys.h
lib-runtime/src/: CMakeLists.txt  scheduler.c  tasks.c
lib-runtime/src/container/: ring.c
lib-runtime/src/utility/: errors.c  logger.c
lib-runtime/test/: CMakeLists.txt  ring.cpp  scheduler.cpp  tasks.cpp
src/: CMakeLists.txt  main.c  scheduler.c  tasks.c
src/container/: ring.c
src/utility/: errors.c  logger.c  ring.c
test/: CMakeLists.txt  example.cpp  ring.cpp  scheduler.cpp  tasks.cpp
tools/: amend.sh  install.sh
tools/bake/: bake.py  pyproject.toml
tools/bake/src/: bake.py
