[project]
name = "scheduler-tools"
version = "0.1.0"
description = "A collection of tools and utilites for constructing the ADF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.sources]
bake = { workspace = true }

[tool.uv.workspace]
members = ["tools/*"]

[tool.uv]
dev-dependencies = [
    "bake"
]
package=false
