set(GBOX_RUNTIME_NAME ${PROJECT_NAME}-runtime)

set(GBOX_RUNTIME_SRC_PATH "${GBOX_RUNTIME_PATH}/src")
set(GBOX_RUNTIME_INC_PATH "${GBOX_RUNTIME_PATH}/inc")
set(GBOX_RUNTIME_TEST_PATH "${GBOX_RUNTIME_PATH}/test")

add_subdirectory(${GBOX_RUNTIME_SRC_PATH})
add_subdirectory(${GBOX_RUNTIME_TEST_PATH})
